--- a/config/config.yml
+++ b/config/config.yml
@@ -12,6 +12,7 @@ development:
   database:
     name: 'transmission'
     collection: 'remit_centrali'
+    collection_last: 'remit_centrali_last'
     adress: '127.0.0.1:27030'
     log_level: "::Logger::INFO"
   path:
