--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,8 @@ archivia.bat export-ignore
 download.bat export-ignore
 converti.bat export-ignore
 scheduler.bat export-ignore
+download_dev export-ignore
+download export-ignore
 gui.bat export-ignore
 remit.xlsm export-ignore
 lastupdate_dev export-ignore
