--- a/config/config.yml
+++ b/config/config.yml
@@ -31,8 +31,8 @@ production:
     name: 'Ampere'
     collection: 'remit_centrali'
     collection_last: 'remit_centrali_last'
-    # adress1: '10.130.96.220:27018'
-    # adress2: '10.130.96.220:27019'
+    adress1: '10.130.96.220:27018'
+    adress2: '10.130.96.220:27019'
     adress3: '10.130.96.144:27018'
     log_level: "::Logger::INFO"
   path:
