--- a/config/config.yml
+++ b/config/config.yml
@@ -17,6 +17,7 @@ development:
     collection_centrali_daily_tecologia: 'remit_centrali_daily_tecologia'
     collection_centrali_hourly_zona: 'remit_centrali_hourly_zona'
     collection_centrali_daily_zona: 'remit_centrali_daily_zona'
+    collection_centrali_last_daily: 'remit_centrali_last_daily'
     adress: '127.0.0.1:27030'
     log_level: "::Logger::INFO"
   path:
@@ -37,6 +38,7 @@ production:
     collection_centrali_daily_tecologia: 'remit_centrali_daily_tecologia'
     collection_centrali_hourly_zona: 'remit_centrali_hourly_zona'
     collection_centrali_daily_zona: 'remit_centrali_daily_zona'
+    collection_centrali_last_daily: 'remit_centrali_last_daily'
     adress1: '10.130.96.220:27018'
     adress2: '10.130.96.220:27019'
     adress3: '10.130.96.144:27018'
