--- a/config/config.yml
+++ b/config/config.yml
@@ -18,6 +18,7 @@ development:
     collection_centrali_hourly_zona: 'remit_centrali_hourly_zona'
     collection_centrali_daily_zona: 'remit_centrali_daily_zona'
     collection_centrali_last_daily: 'remit_centrali_last_daily'
+    collection_centrali_last: 'remit_centrali_last'
     adress: '127.0.0.1:27030'
     log_level: "::Logger::INFO"
   path:
@@ -39,6 +40,7 @@ production:
     collection_centrali_hourly_zona: 'remit_centrali_hourly_zona'
     collection_centrali_daily_zona: 'remit_centrali_daily_zona'
     collection_centrali_last_daily: 'remit_centrali_last_daily'
+    collection_centrali_last: 'remit_centrali_last'
     adress1: '10.130.96.220:27018'
     adress2: '10.130.96.220:27019'
     adress3: '10.130.96.144:27018'
