Changed: ottimizzato la creazione delle collection per la cache

--- a/config/config.yml
+++ b/config/config.yml
@@ -13,10 +13,10 @@ development:
   database:
     name: 'Ampere'
     collection: 'remit_centrali'
-    collection_centrali_hourly_tecologia: 'remit_centrali_hourly_tecologia'
-    collection_centrali_daily_tecologia: 'remit_centrali_daily_tecologia'
-    collection_centrali_hourly_zona: 'remit_centrali_hourly_zona'
-    collection_centrali_daily_zona: 'remit_centrali_daily_zona'
+    collection_centrali_tecnologia_hourly: 'remit_centrali_tecnologia_hourly'
+    collection_centrali_tecnologia_daily: 'remit_centrali_tecnologia_daily'
+    collection_centrali_zona_hourly: 'remit_centrali_zona_hourly'
+    collection_centrali_zona_daily: 'remit_centrali_zona_daily'
     collection_centrali_last_daily: 'remit_centrali_last_daily'
     collection_centrali_last: 'remit_centrali_last'
     adress: '127.0.0.1:27030'
@@ -35,15 +35,15 @@ production:
   database:
     name: 'Ampere'
     collection: 'remit_centrali'
-    collection_centrali_hourly_tecologia: 'remit_centrali_hourly_tecologia'
-    collection_centrali_daily_tecologia: 'remit_centrali_daily_tecologia'
-    collection_centrali_hourly_zona: 'remit_centrali_hourly_zona'
-    collection_centrali_daily_zona: 'remit_centrali_daily_zona'
+    collection_centrali_tecnologia_hourly: 'remit_centrali_tecnologia_hourly'
+    collection_centrali_tecnologia_daily: 'remit_centrali_tecnologia_daily'
+    collection_centrali_zona_hourly: 'remit_centrali_zona_hourly'
+    collection_centrali_zona_daily: 'remit_centrali_zona_daily'
     collection_centrali_last_daily: 'remit_centrali_last_daily'
     collection_centrali_last: 'remit_centrali_last'
     adress1: '10.130.96.220:27018'
-    adress2: '10.130.96.220:27019'
-    adress3: '10.130.96.144:27018'
+    #adress2: '10.130.96.220:27019'
+    #adress3: '10.130.96.144:27018'
     log_level: "::Logger::INFO"
   path:
     file_dt_upd: './lastupdate'
